deployment/redmine/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: ${REDMINE_APP_NAME}
    annotations:
        kubernetes.io/ingress.class: nginx
        nginx.ingress.kubernetes.io/rewrite-target: /
        nginx.ingress.kubernetes.io/ssl-redirect: 'true'
        # certmanager.k8s.io/cluster-issuer: 'letsencrypt-http01'
    labels:
        app: ${REDMINE_APP_NAME}
spec:
    tls:
    -   secretName: ${REDMINE_TLS_SECRET_NAME}
        hosts:
        - ${REDMINE_FQN}
    rules:
    -   host: ${REDMINE_FQN}
        http:
            paths:
            -   path: /
                pathType: Prefix
                backend:
                    service:
                        name: ${REDMINE_APP_NAME}
                        port:
                            name: http-redmine
